[package]
name = "angelfish"

# When releasing to crates.io:
# - Create "v0.x.x" git tag.
version = "0.0.0"
authors = ["Rsplwe <zrh@zrhdwz.cn>"]
# licence = ?
readme = "README.md"
repository = "https://github.com/BirsTech/angelfish"
description = """
A fast, unique and flexible server structure using Rust for Minecraft
both bedrock and java versions.
"""

[dependencies]
